--- a/LojaCadastro/src/main/resources/application.properties
+++ b/LojaCadastro/src/main/resources/application.properties
@@ -7,3 +7,6 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+
+forum.jwt.secret=A+X; fTJP&Pd,TD9dwVq(hsHX,ya^
+forum.jwt.expiration=86400000
